--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.5.0-beta.1",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.1",
     "react-icons": "^4.9.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.12.0",
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-headroom": "^3.2.0"
   }
 }
